# shadowmesh

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  deploy-gateway.sh  docker-compose.yml  friend-config.toml  rustfmt.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  npm-publish.yml  pages.yml  release.yml
benchmarks/: Cargo.toml
benchmarks/src/: benchmark.rs  lib.rs
cli/: Cargo.toml
cli/src/: client.rs  commands.rs  gateway_client.rs  lib.rs  main.rs
cli/tests/: integration_tests.rs
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts  deployments.ts  github.ts  keys.ts  metrics.ts  names.test.ts  names.ts  types.ts
dashboard/src/components/: BuildLogViewer.tsx  CommandPalette.tsx  ConfirmDialog.tsx  CopyButton.test.tsx  CopyButton.tsx  DeploymentCard.tsx  EmptyState.tsx  FileDropZone.tsx  FolderBrowser.tsx  GithubLoginLink.tsx  LoadingSkeleton.tsx  MetricCard.tsx  Modal.tsx  StatusBadge.test.tsx  StatusBadge.tsx
dashboard/src/context/: AuthContext.tsx  ToastContext.tsx
dashboard/src/layout/: RootLayout.tsx  Sidebar.tsx
dashboard/src/pages/: AnalyticsPage.tsx  DeploymentDetailPage.tsx  DomainsPage.tsx  LoginPage.tsx  NewDeploymentPage.tsx  NotFoundPage.tsx  OverviewPage.tsx  ProjectDetailPage.tsx  SettingsPage.tsx
docs/: adaptive-routing.md  api-reference.md  architecture.md  comparison.md  deployment.md  hosting-guide.md  nat-traversal.md  node-runner-guide.md  protocol-spec.md  sdk-guide.md  testing-guide-phase2.md  tokenomics.md  turn-server-setup.md  webrtc-setup.md  zk-relay.md
docs/runbooks/: auth-failures.md  circuit-breaker-open.md  deployment-persistence-failure.md  distributed-tracing-setup.md  high-error-rate.md  high-latency.md  ipfs-disconnected.md  monitoring-alerting.md  no-requests.md  rate-limiting.md  redis-disconnected.md
gateway/: .env.example  Cargo.toml  Dockerfile  config.toml
gateway/src/: api_keys.rs  audit.rs  auth.rs  cache.rs  cid_validation.rs  circuit_breaker.rs  config.rs  config_watcher.rs  dashboard.rs  deploy.rs  distributed_rate_limit.rs  error.rs  jwt.rs  lib.rs  lock_utils.rs  main.rs  metrics.rs  middleware.rs  node_health.rs  node_resolver.rs  p2p.rs  p2p_commands.rs  p2p_resolver.rs  pin.rs  production.rs  rate_limit.rs  redis_client.rs  routes.rs  signaling.rs  spa.rs  telemetry.rs  upload.rs
gateway/tests/: api_tests.rs  e2e_tests.rs  signaling_tests.rs  upload_tests.rs  webrtc_e2e_tests.rs
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  rbac.yaml  secret.yaml  service.yaml
k8s/helm/shadowmesh/: Chart.yaml  values.yaml
k8s/helm/shadowmesh/templates/: NOTES.txt  _helpers.tpl  gateway-configmap.yaml  gateway-deployment.yaml  gateway-service.yaml  node-configmap.yaml  node-service.yaml  node-statefulset.yaml  pdb.yaml  servicemonitor.yaml
k8s/monitoring/: grafana-dashboard.json
k8s/overlays/production/: kustomization.yaml  secrets-example.yaml
k8s/overlays/staging/: kustomization.yaml
load-tests/: smoke.js  soak.js  stress.js
monitoring/grafana/dashboards/: shadowmesh-gateway.json
monitoring/prometheus/rules/: shadowmesh-alerts.yaml
node-runner/: Cargo.toml  node-config.example.toml
node-runner/assets/: dashboard.html
node-runner/src/: api.rs  auth.rs  bridge.rs  config.rs  dashboard.rs  lib.rs  main.rs  metrics.rs  p2p.rs  p2p_commands.rs  replication.rs  storage.rs
node-runner/tests/: api_integration_tests.rs
protocol/: Cargo.toml
protocol/src/: adaptive_routing.rs  bandwidth.rs  bootstrap.rs  cid_validation.rs  content_protocol.rs  crypto.rs  dht.rs  ens_bridge.rs  fragments.rs  lib.rs  lock_utils.rs  main.rs  naming.rs  node.rs  peer_discovery.rs  replication.rs  routing.rs  signaling.rs  storage.rs  transport.rs  zk_relay.rs
protocol/tests/: integration_tests.rs
scripts/: deploy-dashboard.sh  pre-push.sh
sdk/: package-lock.json  package.json
sdk-browser/: Cargo.toml  package.json
sdk-browser/src/: client.rs  crypto.rs  error.rs  lib.rs  naming.rs  signaling.rs  utils.rs  webrtc.rs
sdk-browser/tests/: web.rs
sdk-browser/www/: index.html
sdk/src/: cache.ts  cli.ts  client.ts  crypto.ts  index.ts  resolver.ts  storage.ts  types.ts  utils.ts
test-site/: index.html  style.css
