[workspace]
members = ["protocol", "gateway", "node-runner", "benchmarks"]
resolver = "2"

[workspace.dependencies]
libp2p = "0.56"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }
blake3 = "1.8"
chacha20poly1305 = "0.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
axum = "0.7.9"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
 infer = "0.16"
