[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
protocol = { path = "../protocol" }
blake3 = "1.8"
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
hex = "0.4"

[[bench]]
name = "benchmark"
harness = false
path = "src/benchmark.rs"
