[package]
name = "shadowmesh-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shadowmesh-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
