[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
protocol = { package = "protocol", path = "../protocol" }
infer = "0.16"

axum-macros = "0.3"

tracing-subscriber = "0.3"

config = "0.14"
toml = "0.8"
