[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "multipart"] }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
protocol = { package = "protocol", path = "../protocol" }
infer = "0.16"
base64 = "0.22"
zip = "2.2"
tempfile = "3.14"
reqwest = { version = "0.12", features = ["json"] }

axum-macros = "0.3"

tracing-subscriber = "0.3"
tracing = "0.1"

config = "0.14"
toml = "0.8"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
urlencoding = "2.1"

[dev-dependencies]
tempfile = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
