[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "multipart", "ws"] }
futures = "0.3"
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
protocol = { package = "protocol", path = "../protocol" }
infer = "0.16"
base64 = "0.22"
zip = "2.2"
tempfile = "3.14"
reqwest = { version = "0.12", features = ["json", "stream"] }

bytes = "1"
axum-macros = "0.3"

tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing = "0.1"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

config = "0.14"
toml = "0.8"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
dotenvy = "0.15"
rand = "0.8"

# Redis for persistence and distributed rate limiting
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "aio"] }

# OpenTelemetry for distributed tracing
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"

# Config hot-reload
notify = "6.1"

# API key hashing
sha2 = "0.10"

# Embedded SPA dashboard
rust-embed = "8"
mime_guess = "2"

# P2P mesh network + naming layer key management
libp2p = { workspace = true, features = [
    "ed25519", "tcp", "noise", "yamux", "kad", "gossipsub",
    "mdns", "request-response", "identify", "macros", "serde", "tokio",
] }

# Content verification
blake3 = "1.8"

# Constant-time comparison to prevent timing side-channels
subtle = "2.6"

[dev-dependencies]
tempfile = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
node-runner = { path = "../node-runner" }
