[package]
name = "node-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
protocol = { path = "../protocol" }
config = "0.14"
toml = "0.8"
tempfile = "3.10"
