[package]
name = "node-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.7.9", features = ["multipart"] }
tower-http = { workspace = true }
protocol = { path = "../protocol" }
config = "0.14"
toml = "0.8"
tempfile = "3.10"
blake3 = { workspace = true }
libp2p = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
infer = { workspace = true }
webrtc = "0.12"
tokio-tungstenite = "0.24"
base64 = "0.22"

[dev-dependencies]
hyper = { workspace = true }
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
