[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "shadowmesh_protocol"
path = "src/lib.rs"

[dependencies]
libp2p = { workspace = true, features = [
    # Existing features
    "tcp", "noise", "yamux", "kad", "gossipsub", "tokio", "macros", "serde",
    # DNS resolution for multiaddrs
    "dns",
    # Peer identification protocol
    "identify",
    # Relay for NAT traversal
    "relay",
    # mDNS for automatic LAN peer discovery
    "mdns",
    # Request-response for P2P content serving
    "request-response",
    # Rendezvous for namespace-based peer discovery
    "rendezvous",
] }
async-trait = "0.1"
# WebRTC transport (alpha - separate crate)
libp2p-webrtc = { version = "0.9.0-alpha.1", features = ["tokio"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = "0.8"
tracing = { workspace = true }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
walkdir = "2.5"
bincode = "1.3"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
zeroize = "1.7"
hex = "0.4"
# DNS TXT record resolution for bootstrap seed discovery
hickory-resolver = "0.25"

[dev-dependencies]
tempfile = { workspace = true }
