[package]
name = "shadowmesh-browser"
version = "0.1.0"
edition = "2021"
description = "ShadowMesh browser SDK with WebRTC support"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    # WebRTC
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcConfiguration",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcSignalingState",
    # WebSocket
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
    # DOM
    "Window",
    "Document",
    "console",
    # Events
    "Event",
    "EventTarget",
    # Crypto
    "Crypto",
    # Fetch API
    "Response",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
]}

# Error handling for WASM
console_error_panic_hook = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Async
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

# Logging
tracing = "0.1"
tracing-wasm = "0.2"

# Crypto (for content hashing/verification)
blake3 = "1.8"

# Secure random (fallback when Web Crypto API unavailable)
getrandom = { version = "0.2", features = ["js"] }

# Encoding (for fragment data in JSON messages)
base64 = "0.22"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size in WASM
opt-level = "s"
lto = true
